# Metadata about the package
[metadata]
license = MIT  # License under which the package is distributed
license_file = LICENSE  # File containing the full license text
classifiers = 
    Programming Language :: Python :: 3.7  # Supported Python version
    Programming Language :: Python :: 3.8  # Supported Python version
    Programming Language :: Python :: 3.9  # Supported Python version
    Operating System :: OS Independent  # Package is OS independent

# Options for package installation
[options]
install_requires = 
    ensure==1.0.2  # Package dependency for ensuring values
    py-youtube==1.1.7  # Package dependency for interacting with YouTube API
python_requires = >=3.7  # Minimum required Python version

# Additional requirements for optional features or testing
[options.extras_require]
testing =
    pytest>=7.1.3  # Testing framework
    mypy>=0.971  # Static type checker
    flake8>=5.0.4  # Linting tool
    tox>=3.25.1  # Testing automation tool
    black>=22.8.0  # Code formatter

# Package data to include
[options.package_data]
MongoDB-Connect=py.typed  # Include type hint information for the MongoDB-Connect package

# Configuration for flake8 tool
[flake8]
max-line-length = 160  # Maximum allowed line length
exclude = __init__.py  # Files to exclude from linting
